# LabRemoCopy

./: .gitignore  LABREMODB.db  README.md  RutinaInicio.sh  VARIABLES_ORQUESTADOR.json  package-lock.json  requirements.txt  websocket.sh
Backend/Database/: createDbAndConfig.sh  install-postgresql.sh
Backend/Web/: ._README.md  ._db (copia).sqlite3  ._db.sqlite3  ._fixtures  ._labRemoto  ._manage.py  ._users  ._workspace  .gitignore  db (copia).sqlite3  db.sqlite3  manage.py
Backend/Web/fixtures/: ._activity.json  ._careers.json  ._country.json  ._schools.json  ._subject.json  ._universities.json  ._users.json  activity.json  careers.json  componente_fixture.json  country.json  schools.json  schools_fixture.json  subject.json  tipocomponente_fixture.json  universities.json  universities_fixture.json  users.json
Backend/Web/labRemoto/: ._.gitignore  .___init__.py  .___pycache__  ._asgi.py  ._models.py  ._serializers.py  ._settings.py  ._urls.py  ._views.py  ._wsgi.py  .gitignore  asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
Backend/Web/users/: .___init__.py  .___pycache__  ._admin.py  ._apps.py  ._forms.py  ._models.py  ._serializers.py  ._tests.py  ._urls.py  ._views.py  admin.py  forms.py  models.py  serializers.py  urls.py  views.py
Backend/Web/workspace/: .___init__.py  ._admin.py  ._apps.py  ._models.py  ._serializers.py  ._tests.py  ._urls.py  ._views.py  models.py  serializers.py  urls.py  views.py
Files/: DCmotorx2.ino.hex  Prueba.ino
Frontend/: ._README.md  ._package-lock.json  ._package.json  ._public  ._src  .env  index.html  jsconfig.json  package-lock.json  package.json
Frontend/public/: ._index.html  ._manifest.json  ._robots.txt  index.html  manifest.json
Frontend/src/: ._App.css  ._App.js  ._App.test.js  ._Sidebar.css  ._bootstrap.scss  ._components  ._context  ._index.css  ._index.js  ._media  ._pages  ._reportWebVitals.js  App.css  App.js  App.jsx  index.js  main.jsx
Frontend/src/components/: ._Activities.js  ._ActivitiesCRUD  ._ActivitySelection  ._Columna.js  ._ContNavBar.js  ._Login  (+26 more)
Hardware/MaquetaLABREMO/: Act2LR.kicad_sch  Act_LR.kicad_sch  InfraLR.kicad_sch  LucesLR.kicad_sch  LucesLR_2.kicad_sch  LucesLR_3.kicad_sch  MILR.kicad_sch  MaquetaLABREMO.kicad_prl  MaquetaLABREMO.kicad_pro  MaquetaLABREMO.kicad_sch  MaquetaLABREMO.xlsx  MaquetaLABREMO.xml  ProgLR.kicad_sch  ProgLR_2.kicad_sch  ProgLR_3.kicad_sch  SensLR.kicad_sch  _autosave-InfraLR.kicad_sch  _autosave-ProgLR_3.kicad_sch  ~MaquetaLABREMO.kicad_sch.lck
Orchestrator/: Base de datos.xlsx  Copia de Copy of Algoritmos.ipynb  Directory_Structure.md  LABREMODB.db  RutinaInicio.sh  VARIABLES_ORQUESTADOR.json  bd.xlsx  comandos.txt  datos.csv  labremoto.sql  pruebas_comandos.ipynb  sql_create_db.sql
Orchestrator/2024-02-16-20-51-19/: 2024-02-16-20-51-19_0.db3  metadata.yaml
Orchestrator/Labremoto/: diagrama.mwb
Orchestrator/Labremoto/src/my_mas/: CMakeLists.txt
Orchestrator/Labremoto/src/my_mas/action/: CargaBit.action
Orchestrator/Labremoto/src/my_mas/msg/: TransEntrada.msg
Orchestrator/ros2_labremoto/: comantos.txt
humble/lib/: libzstd.so.1.4.4
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
labremoto/files/: database_cr.py  generate.py  prueba_rasp.py  topics.csv  try.html
labremoto_ws/install/: local_setup.sh  setup.sh
labremoto_ws/log/: latest_build
labremoto_ws/src/my_mas/: CMakeLists.txt
labremoto_ws/src/my_mas/msg/: Auditor.msg  AuditorMsg.msg  ConfiguracionTarjetas.msg  EncoderM.msg  FileHexLoad.msg  PMaqueta.msg  Sensores.msg
log/: latest_build
prueba_package/: install_eviroment.sh  install_humble.sh
web_site/labRemoto_Front/: package-lock.json  package.json
(+1085 files in other folders)
